objects/ASI_TnE_Account_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>ASI_JP_TnE_Account_Mapping_Order__c</fullName>
        <label>Account Mapping Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Account_Number__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VN</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>KH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Meal</fullName>
                </value>
                <value>
                    <fullName>Local Ent</fullName>
                </value>
                <value>
                    <fullName>Business Trip Ent</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Incidental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_BS_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BS Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_CO_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Account_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_TnE_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;E Budget</label>
        <type>Checkbox</type>
    </fields>
    <label>ASI TnE Account Mapping</label>
    <listViews>
        <fullName>ASI_JP_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Account_Name__c</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_TnE_Country__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping_Order__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_JP_TnE_Account_Mapping</value>
        </filters>
        <label>All JP Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_JP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_HK_All_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_JP_TnE_Account_Name__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_TnE_HK_Account_Mapping</value>
        </filters>
        <label>All HK Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_HK_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_ID_All_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_JP_TnE_Account_Name__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_TnE_ID_Account_Mapping</value>
        </filters>
        <label>All ID Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_ID_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_KR_All_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Account_Name__c</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_TnE_KR_CO_Approver__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping_Order__c</columns>
        <columns>ASI_TnE_Country__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ASI_TnE_KR_BS_Account__c</columns>
        <columns>ASI_TnE_KR_TnE_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_TnE_KR_Account_Mapping</value>
        </filters>
        <label>All KR Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_MY_All_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Account_Name__c</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping_Order__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_TnE_MY_Account_Mapping</value>
        </filters>
        <label>All MY Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_MY_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_PH_All_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_JP_TnE_Account_Name__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_TnE_PH_Account_Mapping</value>
        </filters>
        <label>All PH Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_PH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_All_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_JP_TnE_Account_Name__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_TnE_SG_Account_Mapping</value>
        </filters>
        <label>All SG Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TH_All_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_JP_TnE_Account_Name__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_TnE_TH_Account_Mapping</value>
        </filters>
        <label>All TH Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TW_All_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_JP_TnE_Account_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_TnE_TW_Account_Mapping</value>
        </filters>
        <label>All TW Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TW_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Expense_Type__c</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_TnE_Country__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>All_KH_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_JP_TnE_Account_Name__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_TnE_KH_Account_Mapping</value>
        </filters>
        <label>All KH Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_VN_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Expense_Type__c</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>ASI_TnE_Country__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping_Order__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Account_Mapping__c.ASI_TnE_VN_Account_Mapping</value>
        </filters>
        <label>All VN Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_VN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TnE-ACC-{0000}</displayFormat>
        <label>ASI TnE Account Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI TnE Account Mappings</pluralLabel>
    <recordTypes>
        <fullName>ASI_JP_TnE_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE JP Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_HK_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE HK Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_ID_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE ID Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KH_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE KH Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KR_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE KR Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_MY_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE MY Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_PH_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE PH Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE SG Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TH_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE TH Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TW_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE TW Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_VN_Account_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE VN Account Mapping</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>